# CLBench

./: CMakeLists.txt  CMakeSettings.json  README.md
NumCppKernels/: AddTwo.cl  AddTwoTo.cl  DivideTwo.cl  DivideTwoTo.cl  MinusTwo.cl  MinusTwoTo.cl  MulTwo.cl  MulTwoTo.cl  SelfAdd.cl  SelfAddTo.cl  SelfDivide.cl  SelfDivideTo.cl  SelfMinus.cl  SelfMinusTo.cl  SelfMul.cl  SelfMulTo.cl  SumAll.cl
NumCppKernelsAndroid/: AddTwo.cl  AddTwoTo.cl  DivideTwo.cl  DivideTwoTo.cl  MinusTwo.cl  MinusTwoTo.cl  MulTwo.cl  MulTwoTo.cl  SelfAdd.cl  SelfAddTo.cl  SelfDivide.cl  SelfDivideTo.cl  SelfMinus.cl  SelfMinusTo.cl  SelfMul.cl  SelfMulTo.cl  SumAll.cl
TestKernels/: BlockMul.cl  BlockMulNonConstant.cl  Debug.cl  FindPrime.cl  FirstAddDuringLoad.cl  GroupedConv.cl  MoreWorkMul.cl  NaiveConv.cl  NaiveMul.cl  PassingStruct.cl  PrivateMemMul.cl  ReduceInterleaved.cl  ReduceInterleavedNonDivergent.cl  ReduceSequential.cl  RowBlockRowMajorMul.cl  TestRead.cl  Transpose.cl  TransposedMul.cl  UnrolledConv.cl  UnrolledMul.cl  VectorConv.cl  test.cl
dependency/: OpenCL.lib
include/: Common.h  Compiler.h  Error.hpp  GPU.h  Image.hpp  KernelInfo.hpp  MappedBuffer.h  Matrix.hpp  SizeLiteral.hpp  System.h  Test.hpp  Timer.hpp
source/: Compiler.cpp  Error.cpp  GPU.cpp  KernelInfo.cpp  Test.cpp  main.cpp
